--- a/force-app/main/default/lwc/exercise9Wrapper/exercise9Wrapper.html
+++ b/force-app/main/default/lwc/exercise9Wrapper/exercise9Wrapper.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="EXERCISE 9"  icon-name="custom:custom48">
         <div class="slds-var-p-horizontal_small">
-            <c-exercise9 item-name="Item passed by the caller"></c-exercise9>
+            <c-exercise9 item-name="Item passed by the caller!!"></c-exercise9>
         </div>
-    </lightning-card>
+    </lightning-card> 
 </template>
