correción lwc:if

--- a/force-app/main/default/lwc/exercise19/exercise19.html
+++ b/force-app/main/default/lwc/exercise19/exercise19.html
@@ -5,7 +5,7 @@
             <p>{myCustomLabel}</p>
             <p>ViewSetup enabled:{isSetupEnabled}</p>
         </div>
-        <template if:true={hasPrinterEnabled}>
+        <template lwc:if={hasPrinterEnabled}>
             <lightning-button variant="brand" label="Print" onclick={handleClick} slot="actions"></lightning-button>
         </template>
     </lightning-card>
