--- a/force-app/main/default/lwc/exercise25/exercise25.html
+++ b/force-app/main/default/lwc/exercise25/exercise25.html
@@ -1,10 +1,19 @@
 <template>
     <lightning-card title="EXERCISE 25">
-        <div class="slds-p-horizontal_small">
+        <template lwc:if={objectInfo.error}>
+            <h1>Se ha producido un error</h1>
             <div class="slds-scrollable" style="height: 50rem; width: 50rem;">
-                <pre>{objectInfoSerialized}</pre>
+                <pre>{errorSerialized}</pre>
             </div>
-        </div>
-        <lightning-button label="Toggle" onclick={handleClick} slot="actions"></lightning-button>
+        </template>
+        <template lwc:else>
+            <div class="slds-p-horizontal_small">
+                <div class="slds-scrollable" style="height: 50rem; width: 50rem;">
+                    <pre>{objectInfoSerialized}</pre>
+                </div>
+            </div>
+        </template>
+        <lightning-button label="Toggle object" onclick={handleClick} slot="actions"></lightning-button>
+        <lightning-button variant="destructive" label="Force error" onclick={handleErrorClick} slot="actions"></lightning-button>
     </lightning-card>
 </template>
